<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cart"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_cart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

    </android.support.v7.widget.RecyclerView>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="@color/divider_background"
        app:layout_constraintBottom_toTopOf="@+id/item_total" />

    <Button
        android:id="@+id/button_payment"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="Payment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/to_pay"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_payment"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_payment"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/delivery_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/delivery_charges"
        app:layout_constraintBottom_toTopOf="@+id/discount_amount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_delivery_charges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_discount_amount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/item_total"
        app:layout_constraintBottom_toTopOf="@+id/delivery_charge"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_delivery_charges"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="@drawable/cart_count_background"
        app:layout_constraintBottom_toTopOf="@+id/view_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_apply_coupon"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:textAllCaps="true"
        android:hint="@string/apply_coupon"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/text_apply"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/text_apply"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:gravity="center"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/discount_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/discount_amount"
        app:layout_constraintBottom_toTopOf="@+id/to_pay"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_discount_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@+id/text_to_pay"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>